# frontend-ng-r-discorde

./: .gitignore  Cargo.toml  README.md
discorde-api/: Cargo.toml
discorde-api/src/: chat.rs  main.rs
discorde-api/src/api/: chats.rs  login.rs  mod.rs  user.rs
discorde-api/src/db/: core.rs  mod.rs
discorde-api/src/models/: chat.rs  creds.rs  mod.rs  user.rs
discorde-front/: README.md  angular.json  package-lock.json  package.json
discorde-front/src/: index.html
discorde-front/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
discorde-front/src/components/chat/: chat.component.ts
discorde-front/src/components/message/: message.component.css  message.component.html  message.component.spec.ts  message.component.ts
discorde-front/src/components/user-selector/: user-selector.component.html  user-selector.component.spec.ts  user-selector.component.ts
discorde-front/src/models/: chat.ts  message.ts  user.ts  ws-command.ts
discorde-front/src/pages/chat-page/: chat-page.component.css  chat-page.component.html  chat-page.component.spec.ts  chat-page.component.ts
discorde-front/src/pages/home-page/: home-page.component.html  home-page.component.ts
discorde-front/src/pages/login-page/: login-page.component.html  login-page.component.ts
discorde-front/src/pages/new-chat-page/: new-chat-page.component.css  new-chat-page.component.html  new-chat-page.component.spec.ts  new-chat-page.component.ts
discorde-front/src/services/: chats.ts  consts.ts  observables.ts  store.ts  user.ts
(+3 files in other folders)
